update MONGO_URI to use MongoDB Atlas connection string

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/new0325
+MONGO_URI=mongodb+srv://ankit01:wcHUN1gVr2sGYqSD@cluster0.fayet.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=a1b2c3d4
