update MONGO_URI to specify the database name in the connection string

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://ankit01:wcHUN1gVr2sGYqSD@cluster0.fayet.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ankit01:wcHUN1gVr2sGYqSD@cluster0.fayet.mongodb.net/lineflow?retryWrites=true&w=majority&appName=cluster0
 JWT_SECRET=a1b2c3d4
+# qnVE517ieoLhx0on
+# ankitmalviya06219
